order_service.log
nohup: ignoring input
  File "/home/ubuntu/food_delivery_platform/backend_services/order_service/src/main.py", line 40
    app.run(host=\'0.0.0.0\', port=5002, debug=True)
                  ^
SyntaxError: unexpected character after line continuation character
